--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8f08eca4",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "029d4cb5",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     "from torch import nn\n",
     "from torch.utils.data import DataLoader, random_split\n",
     "\n",
-    "device = torch.device(\"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"device:\", device)\n",
     "\n",
     "batch_size = 128\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "9bbe7972",
    "metadata": {},
    "outputs": [
@@ -101,11 +101,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: train loss 0.4065, train acc 0.8846 | val loss 0.1872, val acc 0.9438 | time 6.23s\n",
-      "Epoch 2: train loss 0.1615, train acc 0.9513 | val loss 0.1275, val acc 0.9610 | time 6.17s\n",
-      "Epoch 3: train loss 0.1142, train acc 0.9652 | val loss 0.1070, val acc 0.9676 | time 6.16s\n",
-      "Epoch 4: train loss 0.0921, train acc 0.9715 | val loss 0.0916, val acc 0.9724 | time 7.07s\n",
-      "Epoch 5: train loss 0.0743, train acc 0.9773 | val loss 0.0821, val acc 0.9746 | time 7.16s\n"
+      "Epoch 1: train loss 0.4134, train acc 0.8819 | val loss 0.1977, val acc 0.9434 | time 6.67s\n",
+      "Epoch 2: train loss 0.1658, train acc 0.9508 | val loss 0.1362, val acc 0.9594 | time 7.87s\n",
+      "Epoch 3: train loss 0.1161, train acc 0.9651 | val loss 0.1067, val acc 0.9664 | time 9.75s\n",
+      "Epoch 4: train loss 0.0896, train acc 0.9721 | val loss 0.0929, val acc 0.9716 | time 9.64s\n",
+      "Epoch 5: train loss 0.0754, train acc 0.9769 | val loss 0.0871, val acc 0.9742 | time 12.84s\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "42101338",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "92ee541e",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01monnx\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01maimet_onnx\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01maimet_onnx\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m QuantizationSimModel\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01maimet_onnx\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdefs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m QuantScheme\n",
+      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01monnx\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01maimet_onnx\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01maimet_onnx\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m QuantizationSimModel\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01maimet_onnx\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdefs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m QuantScheme\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'aimet_onnx'"
      ]
     }
@@ -273,10 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1f5f4519",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'onnxruntime'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Final test on quantized ONNX model (CPU timing)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01monnxruntime\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mort\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      5\u001b[0m quant_onnx_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmnist_mlp_w8a16.onnx\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'onnxruntime'"
+     ]
+    }
+   ],
    "source": [
     "# Final test on quantized ONNX model (CPU timing)\n",
     "import onnxruntime as ort\n",
@@ -294,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d3ac2f08",
    "metadata": {},
    "outputs": [
@@ -302,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final test: loss 0.0720, acc 0.9763 | time 0.47s\n"
+      "Final test: loss 0.0719, acc 0.9764 | time 0.52s\n"
      ]
     }
    ],
